# fow-sim

./: .env.example  .gitignore  README.md  env_example.txt  pyproject.toml  requirements.txt
data/processed/: backtest_metrics.csv  forecasts.parquet  panel.parquet  report_data.json  simulation_GBR_rapid_ai_10.parquet  simulation_GBR_rapid_ai_20.parquet  simulation_GBR_rapid_ai_5.parquet
data/raw/: ai_adoption_index.csv  automation_risk.csv  remote_work_trends.csv  skills_gap_data.csv
models/saved_models/: fow_neural_network.keras
notebooks/: future_of_work_analysis.ipynb
scripts/: run_ui.sh
src/fowsim/: cli.py
src/fowsim/api/: app.py
src/fowsim/config/: indicators.yaml  settings.py
src/fowsim/data/: build_features.py  ingest_worldbank.py  pipeline.py  validate.py
src/fowsim/models/: backtest.py  baselines.py  clustering.py  ethics.py  metrics.py  ml_models.py  tensorflow_models.py  train.py
src/fowsim/nlp/: watson_topics.py
src/fowsim/simulation/: scenarios.py  simulator.py
src/fowsim/ui/: streamlit_app.py
src/fowsim/ui/pages/: 1_Data_Explorer.py  2_Model_Performance.py  3_Scenario_Analysis.py  4_Forecast_Viewer.py
tests/: test_data_validation.py  test_external_data.py  test_models.py  test_scenarios.py  test_validate.py
